syntax = "proto3";

package com.road.yishi.proto.active;

message SumActiveActivateRespMsg {
  string activeId = 1;
  int32 ret = 2;
}
