syntax = "proto3";

package com.road.yishi.proto.active;

message SumActiveItemInfoMsg {
  int32 templateId = 1;
  int32 templateType = 2;
  int32 count = 3;
  bool isbind = 4;
  int32 length = 5;
  int32 job = 6;
}
